--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>SimplePage</title>
    <link rel="stylesheet" href="styles.css"/>
    <link rel="stylesheet" href="fontawesome/css/all.css"/>
    <script type="text/javascript" src="time.js"></script>
@@ -39,7 +39,7 @@
       <form action="https://www.github.com/ThaylorLT/Dotfiles" method="get" target="_blank">
       <button><i class="fas fa-terminal"></i></button> 
       </form>
-      <form action="https://www.github.com/ThaylorLT/HomePage" method="get" target="_blank">
+      <form action="https://www.github.com/ThaylorLT/SimplePage" method="get" target="_blank">
       <button><i class="fab fa-html5"></i></button>
       </form> 
     </div>
