--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <body>
       <div class=" welcome">
        
-         <span class="bold"> Welcome Thaylor !</span>
+         <span class="bold" id="name"></span>
          <span class="bold" id="hour"></span>
          <span id="month"></span>
        
